Fix simultanious presses of Left and Right Control and Shift keys.     https://bugs.freedesktop.org/show_bug.cgi?id=3677